# frpc

./: README.md  frpc.h
validation/: CMakeLists.txt  README.txt  run_validate_11.sh  run_validate_1N.sh
validation/input/: enroll.txt  search.txt
validation/scripts/11/: compile_and_link.sh  run_testdriver.sh
validation/scripts/1N/: compile_and_link.sh  run_testdriver.sh
validation/src/include/: frpc.h  util.h
validation/src/nullImpl/: CMakeLists.txt  nullimplfrpc11.cpp  nullimplfrpc11.h  nullimplfrpc1N.cpp  nullimplfrpc1N.h
validation/src/testdriver/: CMakeLists.txt  util.cpp  validate11.cpp  validate1N.cpp
